# vidly-api

./: manage.py  pyproject.toml
core/: models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_movie.py  0003_movie_genre.py  0004_alter_movie__id.py  0005_alter_genre__id.py  0006_create_superuser.py
vidly/: asgi.py  settings.py  urls.py  wsgi.py
vidly/settings/: common.py  prod.py
