[tool.poetry]
name = "vidly-api"
version = "0.1.0"
description = ""
authors = ["Damilola Osunsanwo <oluwadamilola013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
mysqlclient = "^2.2.0"
djangorestframework = "^3.14.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
